# buyo

./: .gitignore  Cargo.toml  build.sh  deps.txt  generate_html.py  index.html  readme.md  run.sh  todos.md
assets/: server_url.txt
blockstackers_core/: Cargo.toml
blockstackers_core/src/: blockstacker.rs  buyo_game.rs  lib.rs  randomizer.rs  ring_buffer.rs  tet.rs  tetr.rs  vectors.rs
blockstackers_core/src/buyo_game/: tests.rs
blockstackers_core/src/tet/: enums.rs  tables.rs  tests.rs
blockstackers_core/src/tetr/: enums.rs  tables.rs  tests.rs
client/: Cargo.toml
client/src/: assets.rs  draw_scaled.rs  enums.rs  gamehandler.rs  jstime.rs  main.rs  network.rs
client_app_output/: index.html  index_template.html  readme.txt
client_app_output/static/: buyo.d.ts  buyo.js  buyo_bg.wasm.d.ts
rserver/: Cargo.toml
rserver/src/: main.rs
server/: app.py  pyproject.toml  readme.md
server/templates/: index.html
src/: blockstacker.rs  buyo_game.rs  client_testing.rs  jstime.rs  main.rs  randomizer.rs  vectors.rs
src/buyo_game/: tests.rs
web/: Cargo.toml
web/src/: main.rs  websockets.rs
wserver/: Cargo.toml
wserver/src/: main.rs  server_tester.html
