[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.4", features = ["trace", "fs"] }
tracing-subscriber = "0.3.19"
futures = "0.3.31"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
lazy_static = "1.5.0"
tower-cookies = "0.11.0"
